apps/base/mealie/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
  labels:
    homelab.io/app: "true"
    homelab.io/needs-database: "true"
