apps/base/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
spec:
  ports:
    - port: 9000
  selector:
    app: mealie
  type: ClusterIP
